<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edubhuebner.washington.httpstudents.teamapp.GameStatus">

    <!--GAME STATUS-->

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onStatusClick"
        android:text="@string/status_label"
        android:textSize="@dimen/lat_long_text_size" />

    <TextView
        android:id="@+id/status_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/status_label"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/status_label"
        android:textIsSelectable="true"
        android:textSize="@dimen/lat_long_text_size" />

    <!--START DATE/TIME-->

    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:textSize="@dimen/lat_long_text_size"
        android:layout_below="@+id/time_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/time_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/time_label"
        android:layout_toRightOf="@+id/time_label"
        android:textIsSelectable="true"
        android:layout_marginTop="38dp"
        android:textSize="@dimen/lat_long_text_size" />

    <!--GUESS RESULTS-->

    <TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textSize="@dimen/lat_long_text_size"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/time_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/result_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/result_label"
        android:layout_toRightOf="@+id/result_label"
        android:textIsSelectable="true"
        android:layout_marginTop="37dp"
        android:textSize="@dimen/lat_long_text_size" />

    <!--GUESS LOCATION PROMPT-->

    <TextView android:text="@string/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lat_long_text_size"
        android:id="@+id/textView"
        android:layout_marginTop="141dp"
        android:layout_below="@+id/result_label"
        android:layout_centerHorizontal="true" />

    <!--FIND BUTTON-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Challenge"
        android:onClick="onFindClick"
        android:id="@+id/button3"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
