<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--LOCATION COORDINATES-->

    <!--<TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/latitude_label"
        android:textColor="#000"
        android:textSize="@dimen/lat_long_text_size" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/latitude_label"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/latitude_label"
        android:textIsSelectable="true"
        android:textColor="#000"
        android:textSize="@dimen/lat_long_text_size" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/longitude_label"
        android:layout_marginTop="@dimen/text_margin"
        android:textColor="#000"
        android:textSize="@dimen/lat_long_text_size" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/longitude_label"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/longitude_label"
        android:textIsSelectable="true"
        android:layout_marginTop="@dimen/text_margin"
        android:textColor="#000"
        android:textSize="@dimen/lat_long_text_size" />-->

    <!--GAME STATUS BUTTON-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onStatusClick"
        android:id="@+id/StatusButton"
        android:onClick="onStatusClick"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp" />

    <!--PROMPT-->

    <TextView android:text="@string/Prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lat_long_text_size"
        android:id="@+id/textView"
        android:layout_marginBottom="61dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <!--SUBMIT LOCATION BUTTON-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_submission"
        android:id="@+id/button"
        android:onClick="onPostClick"
        android:layout_marginBottom="102dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>



